--- a/style.css
+++ b/style.css
@@ -1,25 +1,67 @@
-/* Estilos para la clase "card" */
+
+*{  
+    padding: 0 ;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+
+body{
+    background-image: url('Imagenes/fondoo.jpg');
+    background-size: cover;
+    background-repeat: no-repeat; 
+}
+       
+    
 
 
-#shopYog{
-    display: flex;
-    flex-wrap: wrap;
+/*navbar*/
+.navbar{
+    background-color: #d271f8;
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+ padding: 1rem;
+}
+
+#verCarrito{
+    width: 30px;
 }
 
 
+/*conteneedor de las clases  estructura*/
+#shopYog{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr); 
+    grid-gap: 15px;
+    padding:24px;
+}
 
+
+/* Estilos para la clase "card" */
 .card {
-    border: 1px solid #705c5c;
+ 
+    border: 1px solid #ccc;
+    border-radius: 10px;
     padding: 10px;
     margin: 10px;
-    background-color: #b62b55;
+    background-color: #d271f8;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
   }
 
 
+
   .card:hover {
     transform: scale(1.05);}
+
+
+img{
+    width:150px;
+        height: 150px;
+    }
+     
   
   /* Estilos para la clase "seccion-Carrito" */
   .seccion-Carrito {
@@ -60,3 +102,12 @@
     font-weight: bold;
   }
   
+  #seccionContainer{
+    display: none;
+    width: 100%;
+  }
+
+  
+  #total{
+    background-color: #ff0000;
+  }
