--- a/style.css
+++ b/style.css
@@ -1,117 +1,149 @@
-
-*{  
-    padding: 0 ;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 
 }
 
-body{
-    background-image: url('Imagenes/fondoo.jpg');
-    background-size: cover;
-    background-repeat: no-repeat; 
+body {
+  background-image: url('Imagenes/fondoo.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-       
-    
+
+
 
 
 /*navbar*/
-.navbar{
-    background-color: #d271f8;
- display: flex;
- flex-wrap: wrap;
- justify-content: space-between;
- padding: 1rem;
+.navbar {
+  background-color: #d271f8;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1rem;
+
 }
 
-#verCarrito{
-    width: 30px;
+
+.finalizarCompra {
+  display: none;
+}
+
+#verCarrito {
+  width: 30px;
 }
 
 
 /*conteneedor de las clases  estructura*/
-#shopYog{
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr); 
-    grid-gap: 15px;
-    padding:24px;
+#shopYog {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 15px;
+  padding: 24px;
 }
 
 
 /* Estilos para la clase "card" */
 .card {
- 
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
-    background-color: #d271f8;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  background-color: #d271f8;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
-  }
+}
 
 
 
-  .card:hover {
-    transform: scale(1.05);}
+.card:hover {
+  transform: scale(1.05);
+}
 
 
-img{
-    width:150px;
-        height: 150px;
-    }
-     
-  
-  /* Estilos para la clase "seccion-Carrito" */
-  .seccion-Carrito {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: 10px;
-    background-color: #f9f9f9;
-  }
-  
-  /* Estilos para la clase "seccion-carrito-tittle" dentro de la clase "seccion-Carrito" */
-  .seccion-Carrito .seccion-carrito-tittle {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  /* Estilos para la clase "seccion-header" */
-  .seccion-header {
-    background-color: #ff0000;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-  
-  /* Estilos para la clase "carito-estilos" */
-  .carito-estilos {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  /* Estilos para la clase "total-content" */
-  .total-content {
-    font-size: 20px;
-    margin-top: 20px;
-    font-weight: bold;
-  }
-  
-  #seccionContainer{
-    display: none;
-    width: 100%;
-  }
+img {
+  width: 150px;
+  height: 150px;
+}
 
-  
-  #total{
-    background-color: #ff0000;
-  }
 
-  #eliminarP{
-    cursor: pointer;
-  }
+/* Estilos para la clase "seccion-Carrito" */
+.seccion-Carrito {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 10px;
+  background-color: #f9f9f9;
+}
+
+/* Estilos para la clase "seccion-carrito-tittle" dentro de la clase "seccion-Carrito" */
+.seccion-Carrito .seccion-carrito-tittle {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+/* Estilos para la clase "seccion-header" */
+.seccion-header {
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+/* Estilos para la clase "carito-estilos" */
+.carito-estilos {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilos para la clase "total-content" */
+.total-content {
+  font-size: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+
+#seccionContainer {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px;
+  background-color: #d271f8;
+}
+
+
+.total {
+  display: none;
+  align-items: center;
+  background-color: #ff0000;
+
+}
+
+.eliminar {
+  cursor: pointer;
+}
+
+.carrito-none button {
+  align-items: end;
+}
+
+.buscador {
+  display: flex;
+  justify-content: right;
+}
+
+.contenedor {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
