--- a/style.css
+++ b/style.css
@@ -30,17 +30,17 @@ body {
 }
 
 #verCarrito {
-  width: 30px;
+  width: 50px;
+  height: 50px;
 }
 
 
 /*conteneedor de las clases  estructura*/
 #shopYog {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+ grid-template-columns: repeat(4, 1fr);
   grid-gap: 15px;
-  padding: 24px;
+  padding: 30px;
 }
 
 
@@ -54,6 +54,8 @@ body {
   background-color: #d271f8;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 
